; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_playlist.c_playlist_entry_add_params.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_playlist.c_playlist_entry_add_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.playlist_entry = type { i32 }
%struct.playlist_param = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @playlist_entry_add_params(%struct.playlist_entry* %0, %struct.playlist_param* %1, i32 %2) #0 {
  %4 = alloca %struct.playlist_entry*, align 8
  %5 = alloca %struct.playlist_param*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.playlist_entry* %0, %struct.playlist_entry** %4, align 8
  store %struct.playlist_param* %1, %struct.playlist_param** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %27, %3
  %9 = load i32, i32* %7, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %30

12:                                               ; preds = %8
  %13 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %14 = load %struct.playlist_param*, %struct.playlist_param** %5, align 8
  %15 = load i32, i32* %7, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.playlist_param, %struct.playlist_param* %14, i64 %16
  %18 = getelementptr inbounds %struct.playlist_param, %struct.playlist_param* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.playlist_param*, %struct.playlist_param** %5, align 8
  %21 = load i32, i32* %7, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.playlist_param, %struct.playlist_param* %20, i64 %22
  %24 = getelementptr inbounds %struct.playlist_param, %struct.playlist_param* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @playlist_entry_add_param(%struct.playlist_entry* %13, i32 %19, i32 %25)
  br label %27

27:                                               ; preds = %12
  %28 = load i32, i32* %7, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %7, align 4
  br label %8

30:                                               ; preds = %8
  ret void
}

declare dso_local i32 @playlist_entry_add_param(%struct.playlist_entry*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
